--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
     <a href="nether.html">Mobs del Nether</a>
     <a href="End.html">Mobs del End</a>
     <a href="contactos.html">Contacto</a>
+    <a href="autores.html">Autores</a>
+    
 </div>
 
 </body>
